--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="row column large-9 xlarge-6 xxlarge-4">
       <h2 class="section-title">How Does This Thing Work?</h2>
       <p class="content">
-        In today’s fast paced world, you’ve got places you need to be but not enough time in your jam packed schedule. Wouldn’t it be nice if there were a transportation service that changed the way you get around daily? Introducing Wild Rydes, an innovative transportation service that helps people get to their destination faster and hassle-free. Getting started is as easy as tapping a button in our app.
+        In today’s fast paced world, , you’ve got places you need to be but not enough time in your jam packed schedule. Wouldn’t it be nice if there were a transportation service that changed the way you get around daily? Introducing Wild Rydes, an innovative transportation service that helps people get to their destination faster and hassle-free. Getting started is as easy as tapping a button in our app.
       </p>
     </div>
 
@@ -110,9 +110,9 @@
     <div class="row column medium-8 xxlarge-6">
       <div class="quote-wrap">
         <div class="quote">
-          “I was almost late to my ultimate frisbee tournament in DOLORES park. BUt Wild Rydes Got me there from the marina in under five minutes.”
+          “I LAWAL ADEBAYO made this as my trial app in under five minutes.”
         </div>
-        <div class="quoter">- Satisfied Wild Rydes User</div>
+        <div class="quoter">- Satisfied Wild rydes user</div>
       </div>
     </div>
   </section>
@@ -158,4 +158,5 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
