--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="page-home">
 
   <header class="site-header">
-    <h1 class="title">lawal Rydes</h1>
+    <h1 class="title">wild Rydes</h1>
     <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -25,7 +25,7 @@
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
-    <a class="home-button" href="/register.html">Giddy Up!</a>
+    <a class="home-button" href="/register.html">ENTER LAWAL!</a>
   </header>
 
   <section class="home-about">
@@ -158,6 +158,7 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
