--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
-    <a class="home-button" href="/register.html">ENTER LAWAL!</a>
+    <a class="home-button" href="/register.html">ENTER HERE LAWAL!</a>
   </header>
 
   <section class="home-about">
@@ -40,7 +40,7 @@
       <div class="column">
         <div class="home-about-block">
           <h3 class="title icon-download">Download The App</h3>
-          <p class="content">Head over to the app store and download the Wild Rydes app. You’re just a few taps away from getting your ryde.</p>
+          <p class="content">Head over to the play store or apple store and download the Wild Rydes app. You’re just a few taps away from getting your ryde.</p>
         </div>
       </div>
 
@@ -85,7 +85,7 @@
         <button type="button">Submit</button>
       </form>
 
-      <h2 class="section-title">Sign Up</h2>
+      <h2 class="section-title">Sign Up or sign in</h2>
 
       <p class="content">Wild Rydes is coming soon! Enter your email to enter the limited private beta</p>
 
@@ -100,7 +100,7 @@
         <a class="icon-fb" href="">Facebook</a>
         <a class="icon-tw" href="">Twitter</a>
         <a class="icon-ig" href="">Instagram</a>
-        <a class="icon-wc" href="">Wechat</a>
+        <a class="icon-wc" href="">tiktok</a>
         <a class="icon-wb" href="">Weibo</a>
       </div>
     </div>
@@ -158,6 +158,7 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
