--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
-    <a class="home-button" href="/register.html">ENTER HERE LAWAL!</a>
+    <a class="home-button" href="/register.html">Giddy up!</a>
   </header>
 
   <section class="home-about">
@@ -40,7 +40,7 @@
       <div class="column">
         <div class="home-about-block">
           <h3 class="title icon-download">Download The App</h3>
-          <p class="content">Head over to the play store or apple store and download the Wild Rydes app. You’re just a few taps away from getting your ryde.</p>
+          <p class="content">Head over to the app store and download the Wild Rydes app. You’re just a few taps away from getting your ryde.</p>
         </div>
       </div>
 
@@ -110,7 +110,8 @@
     <div class="row column medium-8 xxlarge-6">
       <div class="quote-wrap">
         <div class="quote">
-          “I LAWAL ADEBAYO made this as my trial app in under five minutes.”
+          “I was almost late to my ultimate frisbee tournament in DOLORES park. BUt Wild Rydes Got me there from the marina in under five minutes.”
+”
         </div>
         <div class="quoter">- Satisfied Wild rydes user</div>
       </div>
@@ -158,6 +159,7 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
