--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <button type="button">Submit</button>
       </form>
 
-      <h2 class="section-title">Sign Up or sign in</h2>
+      <h2 class="section-title">Sign Up</h2>
 
       <p class="content">Wild Rydes is coming soon! Enter your email to enter the limited private beta</p>
 
@@ -159,6 +159,7 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
